--- a/layers/water-labels.yaml
+++ b/layers/water-labels.yaml
@@ -152,10 +152,9 @@ layers:
             text:
                 text_source: global.ux_language_text_source
                 font:
-                    fill: grey
-                    family: Abel
-                    size: 12px
-                    stroke: { color: global.text_stroke_water, width: 3 }
+                    fill: [0.351,0.770,0.950]
+                    family: Aldrich
+                    size: 10px
         # debug only
 #        icons:
 #            size: [[13, 12px], [15, 18px]]
