sorting through fonts, adding building color for no labels version

--- a/layers/places.yaml
+++ b/layers/places.yaml
@@ -89,7 +89,7 @@ layers:
         #                     priority: 8
         #                     offset: [0, 3px]
         #                     font:
-        #                         family: Exo2
+        #                         family: Play
         #                         size: 11px
         #                         fill: white
 
