island labels added

--- a/layers/globals.yaml
+++ b/layers/globals.yaml
@@ -158,3 +158,4 @@ global:
     text_visible_addresses: true
     text_visible_pois_landuse: true
     icon_visible_pois_landuse: true
+    text_visible_island: true
