--- a/components/globals.yaml
+++ b/components/globals.yaml
@@ -1,4 +1,16 @@
 global:
+    animated: true
+
+    pseudoRandomColor: |
+        function() {
+            return [
+                0.7 * (parseInt(feature.id, 16) / 100 % 1),     // jshint ignore:line
+                0.7 * (parseInt(feature.id, 16) / 10000 % 1),   // jshint ignore:line
+                0.7 * (parseInt(feature.id, 16) / 1000000 % 1), // jshint ignore:line
+                1
+            ];
+        }
+
     ux_application_mode: navigation
     ux_language: false             # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
     ux_language_fallback: false    # l10n language code, trusting OSM in v0.10 tiles, fixed in v1.0 tiles
@@ -89,6 +101,27 @@ global:
                 return name;
             }
         }
+
+    # Order functions
+    order_add_9: function () { return (feature.sort_key * 20 + 9); }
+    order_add_8: function () { return (feature.sort_key * 20 + 8); }
+    order_add_7: function () { return (feature.sort_key * 20 + 7); }
+    order_add_6: function () { return (feature.sort_key * 20 + 6); }
+    order_add_5: function () { return (feature.sort_key * 20 + 5); }
+    order_add_4: function () { return (feature.sort_key * 20 + 4); }
+    order_add_3: function () { return (feature.sort_key * 20 + 3); }
+    order_add_2: function () { return (feature.sort_key * 20 + 2); }
+    order_add_1: function () { return (feature.sort_key * 20 + 1); }
+    order: function () { return (feature.sort_key * 20); }
+    order_sub_1: function () { return (feature.sort_key * 20 - 1); }
+    order_sub_2: function () { return (feature.sort_key * 20 - 2); }
+    order_sub_3: function () { return (feature.sort_key * 20 - 3); }
+    order_sub_4: function () { return (feature.sort_key * 20 - 4); }
+    order_sub_5: function () { return (feature.sort_key * 20 - 5); }
+    order_sub_6: function () { return (feature.sort_key * 20 - 6); }
+    order_sub_7: function () { return (feature.sort_key * 20 - 7); }
+    order_sub_8: function () { return (feature.sort_key * 20 - 8); }
+    order_sub_9: function () { return (feature.sort_key * 20 - 9); }
 
     # To facilitate data visualizations several recommended sort orders are provided
     #
