adding different speeds and fade_in_out properties to each traffic layer

--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -1,3 +1,6 @@
+import:
+    - ../components/textures.yaml
+
 layers:
     pois_and_landuse_labels:
         data: { source: mapzen, layer: [pois,landuse] }
