--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -67,7 +67,7 @@ layers:
                     $zoom: { min: 11 }
                 draw:
                     lines:
-                        style: traffic-animation
+                        style: lines-traffic-animation
                         color: [0.086,0.135,0.260]
                         width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,5px],[16,5px],[17,9px],[18,16px],[19,12px]]
                         outline:
@@ -208,13 +208,13 @@ layers:
                     $zoom: { min: 14 }
                 draw:
                     lines:
-                        style: traffic-animation-twoways
+                        style: fast-traffic-animation-twoways
 
                 oneway:
                     filter: { oneway: yes } # should be `true` for 1.0 tiles
                     draw:
                         lines:
-                            style: traffic-animation
+                            style: fast-traffic-animation
 
             trunk_primary:
                 filter: { highway: [trunk, primary] }
@@ -369,13 +369,13 @@ layers:
                         - highway: service
                 draw:
                     lines:
-                        style: traffic-animation-twoways
+                        style: slow-traffic-animation-twoways
 
                 oneway:
                     filter: { oneway: yes } # should be `true` for 1.0 tiles
                     draw:
                         lines:
-                            style: traffic-animation
+                            style: slow-traffic-animation
 
             tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
@@ -600,77 +600,34 @@ layers:
                             width: [[12,2px],[15,5px],[20,25px]]
 
 styles:
-    traffic-animation-twoways:
-        base: lines
-        mix: [generative-random, tron-palette, functions-zoom]
-        texcoords: true
+    fast-traffic-animation:
+        mix: [lines-traffic-animation]
         shaders:
             defines:
-                ZOOM_START: 14.
-                ZOOM_END: 18.
-                DATASTREAM_SPEED: 20.
-                DATASTREAM_ROADS: 5.0 
-                DATASTREAM_MARGIN: z*.3
-                DATASTREAM_COLOR: palette( fract(floor(v_texcoord.x*DATASTREAM_ROADS)/DATASTREAM_ROADS+u_time*.1)*z )
-                DATASTREAM_AMOUNT: .8
-                DATASTREAM_ANIMATED: global.animated
-            blocks:
-                global: |
-                    float datastream_pattern(vec2 st, float v, float t) {
-                        float p = floor(st.y+v);
-                        return step(t, (random(p*.000001)+random(p))*.5 );
-                    }
-                color: |
-                    #ifdef DATASTREAM_ANIMATED
-                    vec2 st = v_texcoord.xy;
-                    float z = 1.;//zoom();
-                    float datastream_speed = (-.5 * random(floor(v_texcoord.x*DATASTREAM_ROADS)) - .5);
-                    if (st.x < 0.5) {
-                      datastream_speed *= -1.;
-                    }
-                    
-                    color.rgb = mix(color.rgb,
-                                    DATASTREAM_COLOR,
-                                    z*
-                                    datastream_pattern( st, 
-                                                        (u_time*DATASTREAM_SPEED)*datastream_speed,
-                                                        DATASTREAM_AMOUNT)*
-                                                    smoothstep(DATASTREAM_MARGIN,1.,sin(fract(v_texcoord.x*DATASTREAM_ROADS)*3.1415))
-                                    );
-                    #endif
-    traffic-animation:
-        base: lines
-        mix: [generative-random, tron-palette, functions-zoom]
-        texcoords: true
+                ZOOM_START: 13.
+                DATASTREAM_SPEED: 15.
+    fast-traffic-animation-twoways:
+        mix: [lines-traffic-animation]
         shaders:
             defines:
-                ZOOM_START: 14.
-                ZOOM_END: 18.
-                DATASTREAM_SPEED: 20.
-                DATASTREAM_ROADS: 5.0 
-                DATASTREAM_MARGIN: z*.3
-                DATASTREAM_COLOR: palette( fract(floor(v_texcoord.x*DATASTREAM_ROADS)/DATASTREAM_ROADS+u_time*.1)*z )
-                DATASTREAM_AMOUNT: .8
-                DATASTREAM_ANIMATED: global.animated
-            blocks:
-                global: |
-                    float datastream_pattern(vec2 st, float v, float t) {
-                        float p = floor(st.y+v);
-                        return step(t, (random(p*.000001)+random(p))*.5 );
-                    }
-                color: |
-                    #ifdef DATASTREAM_ANIMATED
-                    float z = 1.;//zoom();
-                    float datastream_speed = (-.5 * random(floor(v_texcoord.x*DATASTREAM_ROADS)) - .5);
-                    color.rgb = mix(color.rgb,
-                                    DATASTREAM_COLOR,
-                                    z*
-                                    datastream_pattern( v_texcoord.xy, 
-                                                        (u_time*DATASTREAM_SPEED)*datastream_speed,
-                                                        DATASTREAM_AMOUNT)*
-                                                    smoothstep(DATASTREAM_MARGIN,1.,sin(fract(v_texcoord.x*DATASTREAM_ROADS)*3.1415))
-                                    );
-                    #endif
+                ZOOM_START: 13.
+                DATASTREAM_SPEED: 15.
+                DATASTREAM_TWOWAYS: true
+    slow-traffic-animation:
+        mix: [lines-traffic-animation]
+        shaders:
+            defines:
+                ZOOM_START: 18.
+                ZOOM_END: 20.
+                DATASTREAM_SPEED: 7.
+    slow-traffic-animation-twoways:
+        mix: [lines-traffic-animation]
+        shaders:
+            defines:
+                ZOOM_START: 18.
+                ZOOM_END: 20.
+                DATASTREAM_SPEED: 7.
+                DATASTREAM_TWOWAYS: true
 
     highway-dashed:
         base: lines
