--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -164,7 +164,7 @@ layers:
 
             # Show 0 width roads one zoom before they have width, so they can scale up instead of popping in
             highway-z17:
-                filter: 
+                filter:
                     $zoom: { min: 16 }
                 draw:
                     highway-casing1:
@@ -179,7 +179,7 @@ layers:
                         width: [[8,0px],[16,10px],[17,18px],[18,28px],[19,31px]]
 
             highway-z18:
-                filter: 
+                filter:
                     $zoom: { min: 17 }
                 draw:
                     highway-casing3:
@@ -204,7 +204,7 @@ layers:
                         width: 0px
 
             traffic:
-                filter: 
+                filter:
                     $zoom: { min: 14 }
                 draw:
                     lines:
@@ -316,11 +316,11 @@ layers:
                 draw:
                     lines:
                         color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
-                        width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,1.5px],[16,4px],[17,8px],[18,14px],[19,30px],[20,60px]]
+                        width: [[12,0.5px],[13,0.1px],[14,1.0px],[15,3.2px],[16,6px],[17,8px],[18,14px],[19,30px],[20,60px]]
                         outline:
                             # color: [[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
                             color: [[12,[0.082,0.133,0.259]],[14,[0.082,0.133,0.259]],[15,[0.212,0.302,0.427]],[17,[0.212,0.302,0.427]]]
-                            width: [[12,0px],[14,0.4px],[15,1px],[17,2px],[18,2px]]
+                            width: [[12,0px],[13,0.2px],[14,0.4px],[15,1px],[17,2px],[18,2px]]
                 routes:
                     filter: { ref: true, $zoom: { min: 12 } }
                     draw:
@@ -360,7 +360,7 @@ layers:
                         width: [[12,0px],[13,0px],[14,0.4px],[15,0.5px],[17,2px],[18,2px]]
 
             traffic:
-                filter: 
+                filter:
                     $zoom: { min: 18 }
                     not:
                         - service: parking_aisle
@@ -624,7 +624,7 @@ styles:
         mix: [lines-traffic-animation]
         shaders:
             defines:
-                ZOOM_START: 18.
+                ZOOM_START: 17.
                 ZOOM_END: 20.
                 DATASTREAM_SPEED: 7.
                 DATASTREAM_TWOWAYS: true
